# catp

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md  check.sh  install.sh  lefthook.yml  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
catp-circuits/authorization/: Cargo.toml
catp-circuits/authorization/src/: circuit.rs  lib.rs  proof_bytes.rs
catp-circuits/authorization/tests/: e2e.rs
catp-circuits/groth16/: README.md  go.mod  go.sum
catp-circuits/groth16/circuit/: authorization.go
catp-circuits/groth16/cmd/catp-groth16/: main.go
catp-circuits/groth16/fixtures/: authorization_groth16_v1.witness.example.json
catp-circuits/groth16/keys/: authorization_groth16_v1.manifest.json  authorization_groth16_v1.pk  authorization_groth16_v1.vk
catp-circuits/layer2/: Cargo.toml  Halo2SolidityVerifier.sol  catp-layer2-k12.srs
catp-circuits/layer2/src/: circuit.rs  error.rs  lib.rs  poseidon_probe.rs  proof.rs  types.rs
catp-circuits/layer2/tests/: e2e.rs
catp-circuits/layer3/: Cargo.toml
catp-circuits/layer4/: Cargo.toml
catp-circuits/layer5/: Cargo.toml
catp-circuits/primitives/: Cargo.toml
catp-circuits/primitives/src/: encryption.rs  error.rs  hash.rs  lib.rs  merkle.rs  proof.rs
catp-circuits/wasm/: Cargo.toml  README.md
catp-circuits/wasm/pkg/: catp_wasm.d.ts  catp_wasm.js  catp_wasm_bg.wasm  catp_wasm_bg.wasm.d.ts  package.json
catp-circuits/wasm/src/: lib.rs
catp-contracts/: .env.example  .gitignore  foundry.toml
catp-contracts/deployments/: README.md  sepolia-groth16.example.json  sepolia-groth16.json  sepolia.example.json
catp-contracts/script/: DeployAgentAuthorizer.s.sol  DeployGroth16Authorizer.s.sol  DeployHalo2Authorizer.s.sol
catp-contracts/src/authorization/: AgentAuthorizer.sol  Groth16AuthorizationVerifier.sol  IVerifier.sol
catp-contracts/src/layer2/: ActionData.sol  AgentAuthorizer.sol  Groth16Verifier.sol  Halo2AuthorizationVerifier.sol  Halo2Verifier.sol  IAgentAuthorizer.sol  IVerifier.sol  StubVerifier.sol
catp-contracts/src/layer3/: CommitRegistry.sol  MPAVerifier.sol  OptimisticChallenge.sol
catp-contracts/test/authorization/: AgentAuthorizer.t.sol  Groth16AuthorizationVerifier.t.sol  Groth16SmokeFixture.sol  StubVerifier.sol
catp-contracts/test/layer2/: AgentAuthorizer.t.sol  Groth16AuthorizationVerifier.t.sol  Halo2AuthorizationVerifier.t.sol  StubVerifier.sol
catp-contracts/test/layer3/: CommitRegistry.t.sol  MPAVerifier.t.sol  OptimisticChallenge.t.sol
catp-node/: Cargo.toml
catp-plugin/: .npmignore  jest.config.cjs  package-lock.json  package.json  tsconfig.json
catp-plugin/coverage/: clover.xml  coverage-final.json  lcov.info
catp-plugin/coverage/lcov-report/: index.html
catp-plugin/coverage/lcov-report/audit/: index.html  logger.ts.html  verifier.ts.html
catp-plugin/src/: cli.ts
catp-plugin/src/adapters/: claude-code.ts  index.ts  registry.ts
catp-plugin/src/audit/: logger.ts  paths.ts  verifier.ts
catp-plugin/src/commands/: anchor.ts  authorization.ts  event.ts  init.ts  log.ts  receipt.ts  validate.ts  witness.ts
catp-plugin/src/enforcement/: core.ts
catp-plugin/src/hook/: post.ts  pre.ts  runtime.ts
catp-plugin/src/policy/: engine.ts  loader.ts  types.ts
catp-plugin/src/runtime/: types.ts  validate.ts
catp-plugin/tests/adapters/: claude-code.test.ts  index.test.ts  registry.test.ts
catp-plugin/tests/audit/: logger.test.ts  verifier.test.ts
catp-plugin/tests/commands/: anchor.test.ts  authorization.test.ts  event.test.ts  init.test.ts  log.test.ts  receipt.test.ts  validate.test.ts  witness.test.ts
catp-plugin/tests/enforcement/: core.test.ts
catp-plugin/tests/hook/: runtime.test.ts
catp-plugin/tests/policy/: engine.test.ts  loader.test.ts
catp-plugin/tests/runtime/: validate.test.ts
catp-sdk/: package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
catp-sdk/src/: index.ts
catp-sdk/src/authorization/: AuthorizerClient.ts  Groth16ProofArtifact.ts  ProofClient.ts  index.ts
catp-sdk/src/layer2/: AuthorizerClient.ts  PolicyBuilder.ts  ProofClient.ts  index.ts  types.ts
catp-sdk/tests/authorization/: AuthorizerClient.test.ts  Groth16ProofArtifact.test.ts  PolicyBuilder.test.ts  ProofClient.test.ts
catp-sdk/tests/layer2/: AuthorizerClient.test.ts  Groth16ProofArtifact.test.ts  PolicyBuilder.test.ts  ProofClient.test.ts
catp-tests/: README.md
catp-verify/: Cargo.toml
catp-verify/src/: lib.rs  main.rs
docs/: E2E_GROTH16_SEPOLIA.md  INSTALL.md  RELEASE_0.2.0.md  RELEASE_0.3.0.md  SECURITY_REVIEW_AUTHORIZATION.md  SECURITY_REVIEW_LAYER2.md
examples/authorization-basic/: README.md  action.json  catp-policy.toml
examples/receipt-basic/: README.md  catp-policy.toml  hook-pre.json
scripts/: check-groth16-setup.sh  check-groth16-verifier-size.sh  deploy-groth16-sepolia.sh  deploy-layer2-sepolia.sh  encode-groth16-execute.sh  execute-groth16-authorization.sh  generate-groth16-verifier.sh  prove-groth16-authorization.sh  smoke-groth16-sepolia.sh  sync-halo2-verifier.sh
(+5 files in other folders)
