[workspace]
resolver = "2"
members = [
    "catp-circuits/primitives",
    "catp-circuits/layer2",
    "catp-circuits/layer3",
    "catp-circuits/layer4",
    "catp-circuits/layer5",
    "catp-circuits/wasm",
    "catp-node",
    "catp-verify",
]

# Shared dependency versions — edit here to update all crates at once.
[workspace.dependencies]

# Without opt-level >= 3, Halo2 proof generation is too slow to be usable.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

