[package]
name = "catp-verify"
version = "0.1.0"
edition = "2021"

[lib]
name = "catp_verify"

[[bin]]
name = "catp-verify"
path = "src/main.rs"

[dependencies]
catp-layer2 = { path = "../catp-circuits/layer2" }
catp-primitives = { path = "../catp-circuits/primitives" }
halo2curves = { version = "0.6", default-features = false, features = ["bits"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
