[package]
name = "catp-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
# Encryption (P5)
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
hkdf = "0.12"
zeroize = { version = "1", features = ["derive"] }

# Hashing
sha2 = "0.10"
blake2 = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

[dev-dependencies]
hex = "0.4"
